--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "com.unity.ides",
   "displayName": "Multi IDEs",
   "description": "Code editor integration for supporting multiple IDEs as code editor for unity. Adds support for generating csproj files for intellisense purposes, auto discovery of installations, etc.",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "unity": "2019.4",
   "unityRelease": "25f1",
   "dependencies": {
     "com.unity.test-framework": "1.1.9"
   },
   "_upm": {
-    "changelog": "Integration:\n\n- Monitor `additionalfile` extension by default.\n- Try opening a Visual Studio Code workspace if there's one (`.code-workspace` file in the Unity project).\n\nProject generation:\n\n- Identify `asset`, `meta`, `prefab` and `unity` files as `yaml` (Visual Studio Code).\n- Add `sln`/`csproj` file nesting (Visual Studio Code).\n- Improve SDK style project generation."
+    "changelog": "Integration:\n\n- Added support for Trae IDE.\n- Added support for Trae CN IDE.\n- Added support for Qoder IDE."
   },
   "upmCi": {
     "footprint": "74a5df56c8eb360db167269a677bc8e15ff95645"
